Update cell output.

--- a/example/workflow/computing-attractors.ipynb
+++ b/example/workflow/computing-attractors.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {
     "cell_id": "6f6aab506e844dc7952d0f7b9f35e59d",
     "deepnote_app_coordinates": {
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "cell_id": "943489ec037249b4b4ab579cb7c7a587",
     "deepnote_app_coordinates": {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {
     "cell_id": "7fecf49a849b4fc1aa11863a901f0dbd",
     "deepnote_app_coordinates": {
@@ -239,7 +239,7 @@
        "[ColoredVertexSet(cardinality = 27262976, unique vertices = 27262976, unique colors = 1)]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {
     "cell_id": "c94645e35c9442b5a68f0914d62ac2a6",
     "deepnote_app_coordinates": {
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {
     "cell_id": "1844fec291324011afc25a8a7d4033e3",
     "deepnote_app_coordinates": {
@@ -1693,10 +1693,10 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7fa3598e7460>"
+       "<graphviz.sources.Source at 0x7fe88f9fbc10>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1729,7 +1729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {
     "cell_id": "dc5caeff950e42a5a2327981611c01d5",
     "deepnote_app_coordinates": {
@@ -1775,7 +1775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {
     "cell_id": "2e7fb3ac41fb43d09e3ffb67bc8de51b",
     "deepnote_app_coordinates": {
@@ -1802,7 +1802,7 @@
        "ColoredVertexSet(cardinality = 604462909807314600000000, unique vertices = 73786976294838210000, unique colors = 8192)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,7 +1833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "cell_id": "0155363cc0db45499b50b3ce639fdc1e",
     "deepnote_app_coordinates": {
@@ -1861,7 +1861,7 @@
        " ColoredVertexSet(cardinality = 15959465984, unique vertices = 15959465984, unique colors = 1488)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1891,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {
     "cell_id": "5c78ba00ac6a4b48bbd71d5a4b645741",
     "deepnote_app_coordinates": {
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {
     "cell_id": "b871a499825a492c8932b089b0424dcb",
     "deepnote_app_coordinates": {
@@ -1974,7 +1974,7 @@
        " 'disorder': ColorSet(cardinality=6144)}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {
     "cell_id": "8c721ae2c0b84984b575b67cf26013a6",
     "deepnote_app_coordinates": {
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {
     "cell_id": "72f8a5842c2e413aa29ad3ebde5f8f5a",
     "deepnote_app_coordinates": {
@@ -2130,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {
     "cell_id": "9feb6bf6348e4f8fb4d603a577c936dd",
     "deepnote_app_coordinates": {
@@ -2157,7 +2157,7 @@
        "BooleanNetwork(variables = 66, parameters = 0, regulations = 139)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2189,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {
     "cell_id": "e16513d2a1f346ef9632e12b122c8b12",
     "deepnote_app_coordinates": {
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {
     "cell_id": "c34a846554aa43daa3c2b8a20a170eae",
     "deepnote_app_coordinates": {
@@ -2295,7 +2295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {
     "cell_id": "b5d8f833b5964ba3b9b9a6f59ff463bf",
     "deepnote_app_coordinates": {
