Improve examples readme.

--- a/example/workflow/manipulating-boolean-networks.ipynb
+++ b/example/workflow/manipulating-boolean-networks.ipynb
@@ -473,7 +473,10 @@
        " {'source': VariableId(1), 'target': VariableId(2), 'observable': True},\n",
        " {'source': VariableId(1), 'target': VariableId(0), 'observable': True},\n",
        " {'source': VariableId(0), 'target': VariableId(0), 'observable': True},\n",
-       " {'source': VariableId(2), 'target': VariableId(2), 'observable': True}]"
+       " {'source': VariableId(2),\n",
+       "  'target': VariableId(2),\n",
+       "  'monotonicity': 'activation',\n",
+       "  'observable': True}]"
       ]
      },
      "execution_count": 9,
@@ -488,7 +491,7 @@
     "rg.add_regulation({ \"source\": \"b\", \"target\": \"a\" })\n",
     "\n",
     "rg.add_regulation({ \"source\": \"a\", \"target\": \"a\" }) # autoregulations\n",
-    "rg.add_regulation({ \"source\": \"c\", \"target\": \"c\" })\n",
+    "rg.add_regulation(\"c -> c\")                         # Use aeon file syntax (->, -|, -?, etc.)\n",
     "\n",
     "rg.regulations()"
    ]
@@ -1665,7 +1668,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.sources.Source at 0x7fa7a34afc40>"
+       "<graphviz.sources.Source at 0x7f0d618147f0>"
       ]
      },
      "execution_count": 28,
