Add basic functionality regarding syntactic trees for HCTL formulae.

--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -97,8 +97,8 @@
     }
    ],
    "source": [
-    "bn_inlined = bn.inline_inputs()\n",
-    "print(bn_inlined)"
+    "bn = bn.inline_inputs()\n",
+    "print(bn)"
    ]
   },
   {
@@ -207,8 +207,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ColoredVertexSet(cardinality = 3605, unique vertices = 3605, unique colors = 16), ColoredVertexSet(cardinality = 2, unique vertices = 2, unique colors = 2)]\n",
-      "ColoredVertexSet(cardinality = 3607, unique vertices = 3607, unique colors = 16)\n"
+      "[ColoredVertexSet(cardinality = 3605, unique vertices = 1602, unique colors = 16), ColoredVertexSet(cardinality = 2, unique vertices = 2, unique colors = 2)]\n",
+      "ColoredVertexSet(cardinality = 3607, unique vertices = 1602, unique colors = 16)\n"
      ]
     }
    ],
@@ -248,7 +248,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ColoredVertexSet(cardinality = 12, unique vertices = 12, unique colors = 10)\n"
+      "ColoredVertexSet(cardinality = 12, unique vertices = 4, unique colors = 10)\n"
      ]
     }
    ],
@@ -328,7 +328,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ColoredVertexSet(cardinality = 10, unique vertices = 10, unique colors = 9)\n",
+      "ColoredVertexSet(cardinality = 10, unique vertices = 2, unique colors = 9)\n",
       "ColoredVertexSet(cardinality = 2, unique vertices = 2, unique colors = 1)\n"
      ]
     }
@@ -350,6 +350,116 @@
    "metadata": {},
    "source": [
     "We see that for 9 out of 10 colors (that admit fixed points), the p53 is stably activated. However, for the one remaining color, the p53 is deactivated in both fixed points."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57842e1a",
+   "metadata": {},
+   "source": [
+    "#### Generating and exploring syntactic tree of HCTL formulae"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa95d8cc",
+   "metadata": {},
+   "source": [
+    "It is also possible to build and explore the syntactic trees for any HCTL formulae. The tree might be more suitable representation than a string."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "1dfae9bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Bind {x}: (Ag (Ef {x})))\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree = HctlTreeNode(\"!{x}: AG EF {x}\", bn)\n",
+    "print(tree)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "568fd31e",
+   "metadata": {},
+   "source": [
+    "The parsing process also supports some renaming techniques or modifications in order to optimize model-checking computation. If you'd prefer to parse the tree exactly as the formula goes (and exclude the modifications), there is another method for that. However, note that trees that are created this way should not be directly passed to the model checking procedure.\n",
+    "\n",
+    "We can also analyse the tree in some way, such as compute set of all HCTL variables in the formula."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "77315a13",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Bind {x}: (Exists {xx}: ((Jump {x}: ((~ {xx}) & (Ax {x}))) & (Jump {xx}: (Ax {xx})))))\n",
+      "(Bind {x}: (Exists {y}: ((Jump {x}: ((~ {y}) & (Ax {x}))) & (Jump {y}: (Ax {y})))))\n"
+     ]
+    }
+   ],
+   "source": [
+    "tree = HctlTreeNode(\"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\", bn)\n",
+    "print(tree)\n",
+    "\n",
+    "tree_exact = HctlTreeNode.build_exact_from_formula(\"!{x}: 3{y}: ((@{x}: ~{y} & AX {x}) & (@{y}: AX {y}))\")\n",
+    "print(tree_exact)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "30fbac1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'x', 'xx'}\n",
+      "{'x', 'y'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tree.collect_unique_hctl_vars())\n",
+    "print(tree_exact.collect_unique_hctl_vars())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd8288d5",
+   "metadata": {},
+   "source": [
+    "Model checking can be run directly on the trees (instead of suplying formula as a string, a tree is given)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9e455549",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = HctlTreeNode(\"!{x}: AG EF {x}\", bn)\n",
+    "result_v1 = model_check_hctl_tree(tree, stg)\n",
+    "\n",
+    "result_v2 = model_check(\"!{x}: AG EF {x}\", stg)\n",
+    "assert result_v1 == result_v2"
    ]
   }
  ],
