Add traversing for HCTL syntactic trees.

--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -430,8 +430,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'x', 'xx'}\n",
-      "{'x', 'y'}\n"
+      "{'xx', 'x'}\n",
+      "{'y', 'x'}\n"
      ]
     }
    ],
@@ -442,15 +442,50 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd8288d5",
+   "id": "f8b4fed2",
    "metadata": {},
    "source": [
-    "Model checking can be run directly on the trees (instead of suplying formula as a string, a tree is given)."
+    "Trees can also be traversed and analyzed node by node."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "01938a8b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(Bind {x}: (Ax ({x} & v_p53)))\n",
+      "(Ax ({x} & v_p53))\n",
+      "Ax\n"
+     ]
+    }
+   ],
+   "source": [
+    "node = HctlTreeNode(\"!{x}: AX ({x} & v_p53)\", bn)\n",
+    "print(node)\n",
+    "\n",
+    "child = node.get_children()[0]\n",
+    "print(child)\n",
+    "\n",
+    "child_operator = child.get_operator()\n",
+    "print(child_operator)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd8288d5",
+   "metadata": {},
+   "source": [
+    "Model checking can be run directly on the trees (similar way, but instead of suplying formula as a string, a tree is given)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "9e455549",
    "metadata": {},
    "outputs": [],
