Update MC example notebook.

--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -431,7 +431,7 @@
      "output_type": "stream",
      "text": [
       "{'xx', 'x'}\n",
-      "{'y', 'x'}\n"
+      "{'x', 'y'}\n"
      ]
     }
    ],
@@ -491,11 +491,19 @@
    "outputs": [],
    "source": [
     "tree = HctlTreeNode(\"!{x}: AG EF {x}\", bn)\n",
-    "result_v1 = model_check_hctl_tree(tree, stg)\n",
+    "result_v1 = model_check(tree, stg)\n",
     "\n",
     "result_v2 = model_check(\"!{x}: AG EF {x}\", stg)\n",
     "assert result_v1 == result_v2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "feed1cab-65c1-4207-9edf-2e55e9d5a4dc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -514,7 +522,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
