Extend model-checking bindings, refactor.

--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -73,7 +73,11 @@
   {
    "cell_type": "markdown",
    "id": "ba5c6906",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "At this point, all model inputs are represented as variables with constant update functions (this representation tends to have the best compatibility with other tools). This is however inefficient for both BDD representation and for the model-checking algorithm.\n",
     "\n",
@@ -86,7 +90,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "7d2cf9c9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -104,7 +112,11 @@
   {
    "cell_type": "markdown",
    "id": "0b9d77f5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We now have a partially specified BN with 13 variables that encode its states, and 4 parameters that encode colors (various concretizations of the network). During model checking, we can analyze which colors (concretizations) satisfy various properties."
    ]
@@ -112,7 +124,11 @@
   {
    "cell_type": "markdown",
    "id": "d32e82a9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Extended symbolic transition graph\n",
     "\n",
@@ -125,7 +141,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "7a7e27b6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "stg = get_extended_stg(bn, 3)"
@@ -134,7 +154,11 @@
   {
    "cell_type": "markdown",
    "id": "7077d677",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Running HCTL model checker"
    ]
@@ -142,7 +166,11 @@
   {
    "cell_type": "markdown",
    "id": "8b557fdb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The HCTL model checker takes a transition graph and dynamic property encoded as an HCTL formula, and computes which state-color pairs (of the transition graph) satisfy the formula. HCTL enables to express a range of important properties regarding the long-term behaviour of the system.\n",
     "\n",
@@ -152,7 +180,11 @@
   {
    "cell_type": "markdown",
    "id": "db8e4ecb",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "To design more useful (and complex) HCTL formulae, we usually use following \"hybrid\" operators (their usage is illustrated later in this notebook):\n",
     "- a `binder` (`!`) or `exists` (`3`) are quantifiers that \"mark\" a state, which can then be referenced later in the formula\n",
@@ -168,7 +200,11 @@
   {
    "cell_type": "markdown",
    "id": "cc928aaf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "For more information on the HCTL syntax or the model checker, refer to [this Github page](https://github.com/sybila/biodivine-hctl-model-checker)."
    ]
@@ -176,7 +212,11 @@
   {
    "cell_type": "markdown",
    "id": "6b99f049",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Checking for general properties regarding attractors"
    ]
@@ -184,7 +224,11 @@
   {
    "cell_type": "markdown",
    "id": "8065ae61",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can use the both the basic AEON functionality and HCTL model checking to check for attractors. However, the model checker allows to check for more detailed properties. It also allows us to specify which attractors we are interested in."
    ]
@@ -192,7 +236,11 @@
   {
    "cell_type": "markdown",
    "id": "e3b215f8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's start with the computation of general attractors. We can compare the results of classical attractor computation and the model checker."
    ]
@@ -201,7 +249,11 @@
    "cell_type": "code",
    "execution_count": 5,
    "id": "d68d41a0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -225,7 +277,11 @@
   {
    "cell_type": "markdown",
    "id": "183e7680",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The difference is that the model checker always gives us one set of all coloured-states satisfying the formula, whereas the classical AEON computation returns a list of such sets. However, if we combine them, the results are the same."
    ]
@@ -233,7 +289,11 @@
   {
    "cell_type": "markdown",
    "id": "a4361a22",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's now focus on some particular types of attractors. We can for instance compute only fixed points, or non-trivial cyclic attractors:"
    ]
@@ -242,7 +302,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "f7a5f21a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -262,7 +326,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "ae1ed098",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -282,7 +350,11 @@
    "cell_type": "code",
    "execution_count": 8,
    "id": "43fe2c2c",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -301,7 +373,11 @@
   {
    "cell_type": "markdown",
    "id": "1fa99128",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We can now see that there are 12 fixed-points for 10 different colors. That means there are 6 colors without fixed points.\n",
     "\n",
@@ -313,7 +389,11 @@
   {
    "cell_type": "markdown",
    "id": "7103219e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Let's imagine we are now interested only in fixed-points attractors with active p53."
    ]
@@ -322,7 +402,11 @@
    "cell_type": "code",
    "execution_count": 9,
    "id": "992de7b9",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -347,7 +431,11 @@
   {
    "cell_type": "markdown",
    "id": "a8a46b83",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "We see that for 9 out of 10 colors (that admit fixed points), the p53 is stably activated. However, for the one remaining color, the p53 is deactivated in both fixed points."
    ]
@@ -355,7 +443,11 @@
   {
    "cell_type": "markdown",
    "id": "57842e1a",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "#### Generating and exploring syntactic tree of HCTL formulae"
    ]
@@ -363,7 +455,11 @@
   {
    "cell_type": "markdown",
    "id": "fa95d8cc",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "It is also possible to build and explore the syntactic trees for any HCTL formulae. The tree might be more suitable representation than a string."
    ]
@@ -372,7 +468,11 @@
    "cell_type": "code",
    "execution_count": 10,
    "id": "1dfae9bf",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -390,7 +490,11 @@
   {
    "cell_type": "markdown",
    "id": "568fd31e",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "The parsing process also supports some renaming techniques or modifications in order to optimize model-checking computation. If you'd prefer to parse the tree exactly as the formula goes (and exclude the modifications), there is another method for that. However, note that trees that are created this way should not be directly passed to the model checking procedure.\n",
     "\n",
@@ -401,7 +505,11 @@
    "cell_type": "code",
    "execution_count": 11,
    "id": "77315a13",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -424,14 +532,18 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "30fbac1f",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "{'xx', 'x'}\n",
-      "{'x', 'y'}\n"
+      "{'y', 'x'}\n"
      ]
     }
    ],
@@ -443,7 +555,11 @@
   {
    "cell_type": "markdown",
    "id": "f8b4fed2",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Trees can also be traversed and analyzed node by node."
    ]
@@ -452,7 +568,11 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "01938a8b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -478,7 +598,11 @@
   {
    "cell_type": "markdown",
    "id": "dd8288d5",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Model checking can be run directly on the trees (similar way, but instead of suplying formula as a string, a tree is given)."
    ]
@@ -487,7 +611,11 @@
    "cell_type": "code",
    "execution_count": 14,
    "id": "9e455549",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "tree = HctlTreeNode(\"!{x}: AG EF {x}\", bn)\n",
@@ -498,9 +626,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5da9222",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "source": [
+    "#### Using wild-card propositions during model checking"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce771615",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Sometimes we might want to pre-compute certain sets of states and later re-use them during further computation. This is possible, as we can construct `extended` formulae with special `wild-card propositions` that are evaluated as provided (colored) sets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d913a163",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Let's first evaluate some arbitrary sub-formula. Note that in order to re-use the result of the model-checking procedure in subsequent computation, we must disallow a so called `sanitization` step. This step (which is defaultly active) cleans the underlaying BDDs by removing some potentially redundant symbolic variables. However, these variables are still needed in our case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "a19418da",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "intermediate_result = model_check(\"!{x}: AX ({x} & v_p53)\", stg, sanitize=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a1605a4",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "Then, we'll define an extended formula with a special proposition that we will use to reference the previous result. These special propositions are given as `%proposition-name%`. To evaluate the extended formula, we use a special function, where we provide a context for each wild-card proposition."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a44c2e62",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "extended_formula = \"EF %p%\"\n",
+    "context_mapping = {\"p\": intermediate_result}\n",
+    "\n",
+    "result = model_check_extended(extended_formula, stg, context_mapping)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8b0ef72",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
+   "source": [
+    "We can check that the result is the same as if we computed everything in one step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "2dd94e76",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "result_one_step = model_check(\"EF (!{x}: AX ({x} & v_p53))\", stg)\n",
+    "assert result == result_one_step"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feed1cab-65c1-4207-9edf-2e55e9d5a4dc",
+   "id": "09a98944",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -522,7 +756,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
