Extend classification example/bindings, bump version

--- a/example/workflow/model-checking.ipynb
+++ b/example/workflow/model-checking.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "This notebook illustrates the model-checking capabilities of AEON.py. It allows to model check HCTL properties over (partially defined) Boolean network models.\n",
     "\n",
-    "This notebook assumes that you already have a basic understanding of AEON.py as presented in the remianing notebooks in this folder. However, you should be able to follow this tutorial even if you have not read the remaining notebooks, just keep in mind that you can find more information about the presented features there.\n",
+    "This notebook assumes that you already have a basic understanding of AEON.py as presented in the remaining notebooks in this folder. However, you should be able to follow this tutorial even if you have not read the remaining notebooks, just keep in mind that you can find more information about the presented features there.\n",
     "\n"
    ]
   },
